# archive.observer

./: .env.example  .gitignore  Cargo.toml  README.md  justfile  package-lock.json  package.json  pagefind.toml  tailwind.config.js
.github/workflows/: cd.yml  ci.yml
benches/: my_benchmark.rs
css/: main.css
src/: config.rs  lib.rs  main.rs  render.rs
templates/: about.jinja  head.liquid  index.jinja  index.liquid  layout.jinja  layout.liquid  listing.jinja  nav.jinja  nav.liquid  post.jinja  post.liquid  post_text.jinja
