[package]
    name = "aharc"
    version = "0.1.0"
    authors = ["Rafael Epplée <hello@rafa.ee>"]
    edition = "2021"
    rust-version = "1.56.0"
    description = ""
    # documentation = ""
    # homepage = ""
    repository = ""
    license = "MIT"
    keywords = ["aharc"]
    # categories = []

    publish = false # no accidents while in dev

[features]
    default = []
    full = []

[dependencies]
    serde = { version = "1", default-features = false, features = [
        "serde_derive",
    ] }
    once_cell = "1"
    serde_json = "1.0.99"
    anyhow = "1.0.71"
    rayon = "1.7.0"
    html-escape = "0.2.13"
    askama = "0.12.0"
    tracing = "0.1.37"
    tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.3.10", features = ["derive", "env"] }

[dev-dependencies]
    criterion = { version = "0.5", features = ["html_reports"] }
    pretty_assertions = "1"

[package.metadata.cargo-udeps.ignore]
    development = ["criterion", "pretty_assertions"]

[package.metadata.playground]
    features = ["full"]

[profile.release]
    codegen-units = 1
    incremental = false

[profile.bench]
    codegen-units = 1
    incremental = false

[[bench]]
    name = "my_benchmark"
    harness = false
